--- a/src/styles/pics.css
+++ b/src/styles/pics.css
@@ -12,6 +12,7 @@
     width: 48%;
     display: inline-block !important;
     margin: 2px;
+    background-color: rgba(0, 0, 0, 0.2);
 }
 
 @media screen and (min-width: 700px) {
